@@ -1760,6 +1760,9 @@ ags_devout_list_cards(AgsSoundcard *soundcard,
     card_num = -1;
 
     while(TRUE){
+      char *iface;
+      char **hints, **iter;
+      
       error = snd_card_next(&card_num);
 
       if(card_num < 0 || error < 0){
@@ -1776,12 +1779,12 @@ ags_devout_list_cards(AgsSoundcard *soundcard,
 #ifdef AGS_DEBUG
       g_message("found soundcard - %s", str);
 #endif
-    
+
       error = snd_ctl_open(&card_handle, str, 0);
 
       if(error < 0){
 	g_free(str);
-      
+	
 	continue;
       }
 
@@ -1789,8 +1792,9 @@ ags_devout_list_cards(AgsSoundcard *soundcard,
       error = snd_ctl_card_info(card_handle, card_info);
 
       if(error < 0){
+	snd_ctl_close(card_handle);
 	g_free(str);
-      
+
 	continue;
       }
 
@@ -1798,20 +1802,37 @@ ags_devout_list_cards(AgsSoundcard *soundcard,
       error = snd_ctl_pcm_next_device(card_handle, &device);
 
       if(error < 0){
+	snd_ctl_close(card_handle);
 	g_free(str);
       
 	continue;
       }
 
-      if(card_id != NULL){
-	*card_id = g_list_prepend(*card_id, str);
-      }
+      iface = "pcm";
+      hints = NULL;
+            
+      error = snd_device_name_hint(card_num,
+				   iface,
+				   &hints);
 
-      if(card_name != NULL){
-	*card_name = g_list_prepend(*card_name, g_strdup(snd_ctl_card_info_get_name(card_info)));
+      if(hints != NULL){
+	for(iter = hints; iter[0] != NULL; iter++){
+	  if(card_id != NULL){
+	    *card_id = g_list_prepend(*card_id, g_strdup(snd_device_name_get_hint(iter[0],
+										  "NAME")));
+	  }
+
+	  if(card_name != NULL){
+	    *card_name = g_list_prepend(*card_name, g_strdup(snd_ctl_card_info_get_name(card_info)));
+	  }
+	}
+
+	snd_device_name_free_hint(hints);
       }
-    
+      
       snd_ctl_close(card_handle);
+
+      g_free(str);
     }
 
     snd_config_update_free_global();
