@@ -1,3 +1,8 @@
+ags (2.1.56)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* improved ags_devout.c and ags_midiin.c to use ALSA hints
+
 ags (2.1.55)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
